kubernetes/apps/books.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-app
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: books-app
  template:
    metadata:
      labels:
        app: books-app
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: books-html
---
apiVersion: v1
kind: Service
metadata:
  name: books-service
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: books-app
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-protocol: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto $scheme;
spec:
  ingressClassName: nginx
  rules:
    - host: books.varteqar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: books-service
                port:
                  number: 80
